# public-page

./: .dockerignore  .gitmodules  Cargo.toml  Dockerfile  Jenkinsfile  Rocket.toml  compose.yaml  compose.yml  deployment.yaml  docker-compose.yml  package-lock.json  service.yaml
.github/workflows/: docker-image.yml  rust.yml  rust_check.yml  rust_test.yml
app/: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
app/src/: app.rs  main.rs  tests.rs
app/templates/: index.html
app/tests/: main.rs
auth/: .gitignore  Dockerfile  pyproject.toml
auth/api/: urls.py  views.py
auth/sso/: settings.py  urls.py
dashboard/nginx/: nginx.conf
dashboard/src/utils/: cookies.ts
deploy/compose/: compose.yaml
frontend/: Dockerfile  package.json
html/: 401.html  403.html  404.html  index.html
html/static/css/: error.css
letsencrypt/: ssl-dhparams.pem
nginx/: nginx.conf
registry/: registry.passwd
site/: Cargo.toml  Dockerfile  go.mod  main.go
site/src/: main.rs
site/static/css/: index.css
site/templates/: index.html  sites.html
src/: main.rs
sso/: .dockerignore  Dockerfile  pyproject.toml
sso/sso/: settings.py
static/css/: index.css
