[tool.poetry]
name = "sso"
version = "0.1.0"
description = ""
authors = ["LumbaBalumba <vlad.lazar.ik528@yandex.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
django-rest-framework = "^0.1.0"
psycopg2 = "^2.9.10"
gunicorn = "^23.0.0"
django-oauth-toolkit = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
